--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project2",
   "version": "0.1.0",
-  "homepage": "https://pages.git.generalassemb.ly/treywilliams1111/Project_2_API-React-Router/",
+  "homepage": "https://treyyungg.github.io/SuperHeroAlmanac/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
